tests/result/fail/types/in_place_t.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<tim::in_place_t, int> r; }
